--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -453,7 +453,7 @@ services:
 
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
-    image: hermeznetwork/geth-zkevm-contracts:elderberry-fork.9-geth1.13.11
+    image: adhara.io/hermeznetwork/geth-zkevm-contracts #:elderberry-fork.9-geth1.13.11
     ports:
       - 8545:8545
       - 8546:8546
